test/e2e/chainsaw/httproute-two-headers/assertions/httproute-initial.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-two-headers
  namespace: default
spec:
  (length(rules)): 1
  rules:
    - matches:
        - headers:
            - name: X-Security
              type: Exact
              value: secret123
      backendRefs:
        - name: httproute-two-headers-stable-service
        - name: httproute-two-headers-canary-service
          (weight): 0
