test/e2e/chainsaw/httproute-two-headers/assertions/httproute-with-header-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-two-headers
  namespace: default
spec:
  (length(rules)): 2
  rules:
    - matches:
        - headers:
            - name: X-Security
              type: Exact
              value: secret123
      backendRefs:
        - name: httproute-two-headers-stable-service
          (weight): 50
        - name: httproute-two-headers-canary-service
          (weight): 50
    - name: canary-route1
      matches:
        - (length(headers)): 2
          headers:
            - name: X-Security
              type: Exact
              value: secret123
            - name: X-QA
              type: Exact
              value: "true"
      backendRefs:
        - name: httproute-two-headers-canary-service
