test/e2e/chainsaw/httproute-two-headers/assertions/rollout-healthy.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: httproute-two-headers-rollout
  namespace: default
status:
  (phase == 'Healthy'): true
